--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = set(countries)\n"
    ]
   },
   {
