--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "u"
+    "unique_countries = "
    ]
   },
   {
