Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,12 +394,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries = "
+    "unique_countries = list(countries)"
    ]
   },
   {
