--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,8 @@
     }
    ],
    "source": [
-    "num_of_repeats = int[len(countries)-len(unique_countries)]\n",
+    "\n",
+    "num_of_repeats =\n",
     "num_of_repeats # 3"
    ]
   },
