Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
     }
    ],
    "source": [
-    "type(un\n",
+    "type(unique_countries\n",
     "num_of_repeats\n",
     "num_of_repeats # 3"
    ]
