--- a/index.ipynb
+++ b/index.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -432,13 +432,13 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(unique_countries\n",
+    "type(unique_countries)\n",
     "num_of_repeats\n",
     "num_of_repeats # 3"
    ]
