--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
     }
    ],
    "source": [
-    "type(unique_countries)\n",
+    "len(unique_countries)\n",
     "num_of_repeats\n",
     "num_of_repeats # 3"
    ]
