Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -427,7 +427,7 @@
        " 'Malta']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
     }
    ],
    "source": [
-    "len(unique_countries)\n",
+    "len(uniqu)\n",
     "num_of_repeats\n",
     "num_of_repeats # 3"
    ]
