Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -455,13 +455,13 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(uniqu)\n",
+    "len(countries)\n",
     "num_of_repeats\n",
     "num_of_repeats # 3"
    ]
